<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="csp_main_phMan_start_job_init_snapshot" Id="{9e3e2caf-3eb7-0a54-2e25-4aa8b3991590}" SpecialFunc="None">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
WU phase manager snapshot init function

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2020/06/19 	0000.00	 	G.Cera 			Creation of the PRG

**********************************************************************************************************)

FUNCTION csp_main_phMan_start_job_init_snapshot : VOID
VAR_INPUT	
	message_name:			STRING(MAX_OBJ_NAME_LENGTH);
	behaviour:				message_behaviour_enum;			(* Message type. State or event *)
	reset_timeout:			UDINT;							(* Timeout of reset attempt valid for messages
															   with <a href="#message_behaviour_enum"><i>behaviour</i></a>
															   = MESSAGE_BEHAVIOUR_TRY_AND_CHECK *)
    disableable:        	BOOL;							(* Indicates the possibility
																to disable the message by HMI *)
    individual_reset:   	BOOL;							(* Need explicit reset by
																HMI for acknowlege the message.
																TRUE = individual_reset *)
    machine_reaction:		machine_reaction_enum;			(* Machine stop type.(emergency, normal,
																on phase, ...) *)
    typology:				message_typology_enum;			(* <a href="#message_typology_enum"><i>typology</i></a> *)	
END_VAR

VAR_IN_OUT
    process:                process;                    	(*$ <a href="#process_object"><i>process</i></a> membership $*)
	CONVERSION_this:		csp_main_phMan_start_job_snapshot;			
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[process_message_init(
	object_name 		:= message_name,
	behaviour 			:= behaviour,
	reset_timeout 		:= reset_timeout,
	disableable 		:= disableable,
	individual_reset 	:= individual_reset,
	machine_reaction 	:= machine_reaction,
	typology			:= typology,
	process 			:= process,
	CONVERSION_this 	:= CONVERSION_this.message);

CONVERSION_this.sj_reason := '';
CONVERSION_this.order_valid := FALSE;
CONVERSION_this.product_valid := FALSE;
CONVERSION_this.recipe_valid := FALSE;
CONVERSION_this.materials_valid := FALSE;
CONVERSION_this.mark_valid := FALSE;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>